# UrbanLogisticsOptimizer

./: .gitignore  Apresentacao.pptx  CMakeLists.txt  README.md
Analise Empirica/: DA-analiseempirica.xlsx  output.csv  outputexpress.csv
codigo/: Courier.cpp  Courier.h  CourierGenerator.cpp  CourierGenerator.h  ExpressToNormal.cpp  LicensePlateAdder.cpp  NormalPackageGenerator.cpp  NormalPackageGenerator.h  TransportRequest.cpp  TransportRequest.h  TransportTypes.h  WarehouseManagement.cpp  WarehouseManagement.h  main.cpp
documentacao/: Doxyfile
documentacao/html/: _courier_8h_source.html  _courier_generator_8h_source.html  _normal_package_generator_8h_source.html  _transport_types_8h_source.html  _warehouse_management_8h_source.html  annotated.html  annotated_dup.js  class_courier-members.html  class_courier.html  class_courier.js  class_courier_generator-members.html  class_courier_generator.html  class_courier_generator.js  class_normal_package_generator-members.html  class_normal_package_generator.html  class_normal_package_generator.js  class_warehouse_management-members.html  class_warehouse_management.html  class_warehouse_management.js  classes.html  dir_4d7be947362df13686123d6563352e9b.html  dir_4d7be947362df13686123d6563352e9b.js  files.html  functions.html  functions_func.html  index.html  menudata.js  navtreedata.js  navtreeindex0.js  (+4 more)
input/: carrinhas.txt  cenario1_carrinhas.txt  cenario21_carrinhas.txt  cenario21_encomendas.txt  cenario21_encomendasNormal.txt  cenario2_carrinhas.txt  normalTransports.txt  normalTransportsTeste.txt  teste.txt
(+19 files in other folders)
